# Generated by Django 4.2.16 on 2025-12-12 05:31

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):
    dependencies = [
        ("core", "0005_line_voltage_transformer_ratio"),
    ]

    operations = [
        migrations.CreateModel(
            name="CoefficientType",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "code",
                    models.CharField(
                        max_length=50, unique=True, verbose_name="Код типа коэффициента"
                    ),
                ),
                (
                    "name",
                    models.CharField(
                        max_length=150,
                        unique=True,
                        verbose_name="Название типа коэффициента",
                    ),
                ),
                (
                    "description",
                    models.TextField(
                        blank=True, null=True, verbose_name="Описание коэффициента"
                    ),
                ),
            ],
            options={
                "verbose_name": "Тип коэффициента",
                "verbose_name_plural": "Типы коэффициентов",
            },
        ),
        migrations.CreateModel(
            name="CurrentTransformer",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "model_ct_pf_name",
                    models.CharField(
                        help_text="Наименование модели ТТ в PowerFactory (например, 'ТТ 630/1')",
                        max_length=50,
                        unique=True,
                        verbose_name="Наименование модели ТТ в PowerFactory",
                    ),
                ),
                (
                    "primary_current",
                    models.IntegerField(
                        help_text="Первичный ток трансформатора тока (например, 630)",
                        verbose_name="Первичный ток, А",
                    ),
                ),
                (
                    "secondary_current",
                    models.IntegerField(
                        help_text="Вторичный ток трансформатора тока (например, 1)",
                        verbose_name="Вторичный ток, А",
                    ),
                ),
                (
                    "ratio",
                    models.FloatField(
                        editable=False,
                        help_text="Вычисляется автоматически как primary_current / secondary_current",
                        verbose_name="Коэффициент трансформации ТТ",
                    ),
                ),
            ],
            options={
                "verbose_name": "Трансформатор тока",
                "verbose_name_plural": "Трансформаторы тока",
            },
        ),
        migrations.CreateModel(
            name="LineType",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "type_code",
                    models.CharField(
                        max_length=100,
                        unique=True,
                        verbose_name="Наименование типа ЛЭП",
                    ),
                ),
            ],
            options={
                "verbose_name": "Тип ЛЭП",
                "verbose_name_plural": "Типы ЛЭП",
            },
        ),
        migrations.CreateModel(
            name="MethodologyDocument",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "methodology_url",
                    models.CharField(
                        max_length=255,
                        unique=True,
                        verbose_name="URL документа с методикой",
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(
                        auto_now_add=True, verbose_name="Дата и время добавления"
                    ),
                ),
                (
                    "updated_at",
                    models.DateTimeField(
                        auto_now=True, verbose_name="Дата и время последнего обновления"
                    ),
                ),
            ],
            options={
                "verbose_name": "Документ методики",
                "verbose_name_plural": "Документы методик",
            },
        ),
        migrations.CreateModel(
            name="VoltageTransformer",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "model_vt_pf_name",
                    models.CharField(
                        help_text="Наименование модели ТН в PowerFactory (например, 'ТН 220000/100')",
                        max_length=50,
                        unique=True,
                        verbose_name="Наименование модели ТН в PowerFactory",
                    ),
                ),
                (
                    "primary_voltage",
                    models.IntegerField(
                        help_text="Первичное номинальное напряжение ТН в кВ (например, 220)",
                        verbose_name="Первичное напряжение, кВ",
                    ),
                ),
                (
                    "connection_type",
                    models.CharField(
                        choices=[
                            ("delta", "Разомкнутый треугольник (∆)"),
                            ("star", "Звезда (Y)"),
                        ],
                        default="delta",
                        help_text="Тип соединения вторичных обмоток ТН",
                        max_length=20,
                        verbose_name="Тип соединения обмоток",
                    ),
                ),
                (
                    "type",
                    models.CharField(
                        choices=[
                            ("ideal", "Идеальный трансформатор напряжения"),
                            ("standard", "Трансформатор напряжения"),
                            ("capacitive", "Емкостной трансформатор напряжения"),
                        ],
                        default="ideal",
                        help_text="Тип трансформатора напряжения",
                        max_length=50,
                        verbose_name="Тип ТН",
                    ),
                ),
                (
                    "ratio",
                    models.FloatField(
                        editable=False,
                        help_text="Вычисляется автоматически на основе primary_voltage и connection_type. При использовании с ЛЭП используется calculate_ratio(line_voltage_kv).",
                        verbose_name="Коэффициент трансформации ТН",
                    ),
                ),
            ],
            options={
                "verbose_name": "Трансформатор напряжения",
                "verbose_name_plural": "Трансформаторы напряжения",
            },
        ),
        migrations.RemoveField(
            model_name="line",
            name="voltage_transformer_ratio",
        ),
        migrations.AddField(
            model_name="component",
            name="is_active",
            field=models.BooleanField(
                default=True, verbose_name="Статус активации органа"
            ),
        ),
        migrations.AddField(
            model_name="component",
            name="name",
            field=models.CharField(
                blank=True,
                help_text="Будет заполнено автоматически на основе setting_designation",
                max_length=100,
                null=True,
                unique=True,
                verbose_name="Название органа",
            ),
        ),
        migrations.AddField(
            model_name="line",
            name="branch_count",
            field=models.IntegerField(
                blank=True, default=0, null=True, verbose_name="Количество ответвлений"
            ),
        ),
        migrations.AddField(
            model_name="line",
            name="is_offset_applied",
            field=models.BooleanField(
                default=False, verbose_name="Применение смещения в защищаемую зону"
            ),
        ),
        migrations.AddField(
            model_name="line",
            name="offset_coefficient",
            field=models.FloatField(
                blank=True, null=True, verbose_name="Коэффициент смещения для ЛЭП"
            ),
        ),
        migrations.AddField(
            model_name="line",
            name="voltage_level",
            field=models.FloatField(
                default=220.0,
                help_text="Номинальное напряжение ЛЭП, получаемое из PowerFactory",
                verbose_name="Номинальное напряжение ЛЭП, кВ",
            ),
        ),
        migrations.AddField(
            model_name="line",
            name="zero_sequence_voltage",
            field=models.FloatField(
                blank=True,
                null=True,
                verbose_name="Составляющая напряжения нулевой последовательности",
            ),
        ),
        migrations.AlterField(
            model_name="component",
            name="description",
            field=models.TextField(
                blank=True, default="", verbose_name="Описание работы органа"
            ),
        ),
        migrations.AlterField(
            model_name="component",
            name="setting_designation",
            field=models.CharField(
                max_length=100, unique=True, verbose_name="Обозначение органа ДФЗ"
            ),
        ),
        migrations.AlterField(
            model_name="line",
            name="length",
            field=models.FloatField(default=0.0, verbose_name="Длина ЛЭП, км"),
        ),
        migrations.AlterField(
            model_name="protectiondevice",
            name="manufacturer",
            field=models.CharField(
                blank=True,
                max_length=100,
                null=True,
                verbose_name="Производитель (старое поле)",
            ),
        ),
        migrations.CreateModel(
            name="Manufacturer",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "name",
                    models.CharField(
                        max_length=150,
                        unique=True,
                        verbose_name="Название производителя",
                    ),
                ),
                (
                    "methodology",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="manufacturers",
                        to="core.methodologydocument",
                        verbose_name="Методика производителя",
                    ),
                ),
            ],
            options={
                "verbose_name": "Производитель",
                "verbose_name_plural": "Производители",
            },
        ),
        migrations.CreateModel(
            name="LineBranch",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "dispatch_name",
                    models.CharField(
                        blank=True,
                        max_length=100,
                        null=True,
                        unique=True,
                        verbose_name="Диспетчерское наименование ответвления",
                    ),
                ),
                (
                    "pf_name",
                    models.CharField(
                        max_length=100,
                        unique=True,
                        verbose_name="Наименование в PowerFactory",
                    ),
                ),
                ("length", models.FloatField(verbose_name="Длина ответвления, км")),
                (
                    "is_active",
                    models.BooleanField(
                        default=True, verbose_name="Активно ли ответвление"
                    ),
                ),
                (
                    "protection_recommendation",
                    models.TextField(
                        blank=True,
                        null=True,
                        verbose_name="Рекомендация по установке доп. комплекта защиты на ответвлении",
                    ),
                ),
                (
                    "line",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="branches",
                        to="core.line",
                        verbose_name="Основная ЛЭП",
                    ),
                ),
                (
                    "substation",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="line_branches",
                        to="core.substation",
                        verbose_name="Подстанция",
                    ),
                ),
            ],
            options={
                "verbose_name": "Ответвление ЛЭП",
                "verbose_name_plural": "Ответвления ЛЭП",
            },
        ),
        migrations.AddField(
            model_name="line",
            name="ct",
            field=models.ForeignKey(
                blank=True,
                null=True,
                on_delete=django.db.models.deletion.PROTECT,
                related_name="lines",
                to="core.currenttransformer",
                verbose_name="Трансформатор тока",
            ),
        ),
        migrations.AddField(
            model_name="line",
            name="line_type",
            field=models.ForeignKey(
                blank=True,
                null=True,
                on_delete=django.db.models.deletion.PROTECT,
                related_name="lines",
                to="core.linetype",
                verbose_name="Тип ЛЭП",
            ),
        ),
        migrations.AddField(
            model_name="line",
            name="vt",
            field=models.ForeignKey(
                blank=True,
                null=True,
                on_delete=django.db.models.deletion.PROTECT,
                related_name="lines",
                to="core.voltagetransformer",
                verbose_name="Трансформатор напряжения",
            ),
        ),
        migrations.AddField(
            model_name="protectiondevice",
            name="manufacturer_fk",
            field=models.ForeignKey(
                blank=True,
                null=True,
                on_delete=django.db.models.deletion.PROTECT,
                related_name="protection_devices",
                to="core.manufacturer",
                verbose_name="Производитель",
            ),
        ),
        migrations.CreateModel(
            name="ProtectionComponentCoefficient",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "default_value",
                    models.FloatField(verbose_name="Значение по умолчанию"),
                ),
                (
                    "min_value",
                    models.FloatField(
                        blank=True, null=True, verbose_name="Минимальное значение"
                    ),
                ),
                (
                    "max_value",
                    models.FloatField(
                        blank=True, null=True, verbose_name="Максимальное значение"
                    ),
                ),
                (
                    "coefficient_type",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="component_coefficients",
                        to="core.coefficienttype",
                        verbose_name="Тип коэффициента",
                    ),
                ),
                (
                    "component",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="coefficients",
                        to="core.component",
                        verbose_name="Орган ДФЗ",
                    ),
                ),
            ],
            options={
                "verbose_name": "Коэффициент органа защиты",
                "verbose_name_plural": "Коэффициенты органов защиты",
                "unique_together": {("component", "coefficient_type")},
            },
        ),
    ]
